k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ki-site
  namespace: ki-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ki-site
  template:
    metadata:
      labels:
        app: ki-site
    spec:
      automountServiceAccountToken: false
      containers:
        - name: ki-site
          image: ghcr.io/fhswf/ki.site:1.6.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
            requests:
              memory: 64Mi
              cpu: 250m
