k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ki-site
  namespace: ki-site
spec:
  selector:
    app: ki-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
