k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: ki-site
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
  - host: ki.fh-swf.cloud
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ki-site
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  namespace: ki-site
  annotations:
    traefik.frontend.passHostHeader: 'true'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
  - host: www.ki.fh-swf.de
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ki-site
            port:
              number: 80
